--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
-/* Estilos para o header e menu */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #FEF6EE;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 header {
