--- a/estilo.css
+++ b/estilo.css
@@ -190,10 +190,14 @@ a {
     margin: 10px;
 }
 
+
+
 .anuncio-imagem {
     width: 100%;
-    height: auto;
+    /* height: auto; */
     border-radius: 10px;
+    height: 100px; /* Altura padrão definida */
+    object-fit: cover; /* Garante que a imagem preencha o espaço sem distorção */
 }
 
 .anuncio-titulo {
@@ -296,21 +300,44 @@ label {
     font-size: 14px;
 }
 
-    .alert {
-        position: fixed;
-        top: 10px;
-        right: 10px;
-        z-index: 1000;
-        width: auto;
-        min-width: 300px;
-        max-width: 500px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        animation: slide-down 0.4s ease-out;
-    }
-    
-    @keyframes slide-down {
-        from { opacity: 0; transform: translateY(-20px); }
-        to { opacity: 1; transform: translateY(0); }
-    }
+.rights {
+    padding: 10px 0;
+    text-align: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    color: #9b9b9b;
+   
+    overflow: auto;
+}
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
-    
+#footer {
+position: sticky;
+bottom: 0;
+width: 100%;
+height: 2.5rem;            /* altura do rodapé */
+}
+
+.alert {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+    width: auto;
+    min-width: 300px;
+    max-width: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: slide-down 0.4s ease-out;
+}
+
+@keyframes slide-down {
+    from { opacity: 0; transform: translateY(-20px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+
