--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header {
     left: -250px; /* Inicialmente fora da tela */
     width: 250px;
     height: 100%;
-    background-color: #2b3a4e; /* Cor do menu lateral */
+    background-color: #1a1e36; /* Cor do menu lateral */
     padding-top: 60px;
     transition: 0.3s; /* Transição suave */
     z-index: 1000;
@@ -65,7 +65,7 @@ header {
 }
 
 .sidebar a:hover {
-    background-color: #4c5b72;
+    background-color: #395b8f;
 }
 
 /* Conteúdo principal */
