--- a/estilo.css
+++ b/estilo.css
@@ -34,7 +34,7 @@ header {
     align-items: center;
     background-color: #FEF6EE;
     padding: 15px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .logo {
@@ -192,7 +192,7 @@ a {
     border-radius: 10px;
     padding: 15px;
     width: 300px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
     text-align: center;
     margin: 10px;
 }
