--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,24 @@
 @font-face {
-    font-family: 'MinhaFonte'; /* Nome da fonte, você pode escolher */
-    src: url('../') format('truetype'); /* Caminho para o arquivo e formato */
+    font-family: 'Logo'; /* Nome da fonte, você pode escolher */
+    src: url('fonts/IntroRust-Base.otf') format('opentype');    
     font-weight: normal; /* Opcional, defina o peso (normal, bold, etc.) */
     font-style: normal; /* Opcional, defina o estilo (normal, italic, etc.) */
 }
 
+@font-face {
+    font-family: 'Basic'; /* Nome da fonte, você pode escolher */
+    src: url('fonts/introheadr-base.otf') format('opentype');    
+    font-weight: normal; /* Opcional, defina o peso (normal, bold, etc.) */
+    font-style: normal; /* Opcional, defina o estilo (normal, italic, etc.) */
+}
+
+h1{
+    font-family: 'Logo';
+}
+
+
 * {
-    font-family: Arial, sans-serif;
+    font-family: 'Basic';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,20 +27,24 @@
     background-color: #fef6ee; 
 }
 body {
+    color: #1a1e36;
     font-family: Arial, sans-serif;
-     margin: 0;
+    margin: 0;
     padding: 0;
     background-color: #FEF6EE;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .img {
     border-radius: 15px;
 }
 header {
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +63,8 @@ header {
     border: none;
     cursor: pointer;
     font-size: 30px;
-    color: #333;
+    color: #1a1e36;
+    
 }
 
 /* Menu lateral (sidebar) */
@@ -64,9 +81,10 @@ header {
 }
 
 .sidebar a {
+    font-family: 'Logo'; /* Nome da fonte, você pode escolher */
     padding: 15px 25px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
     display: block;
     transition: 0.2s;
@@ -110,13 +128,13 @@ header {
 .search-form {
     display: flex;
     align-items: center;
-    background-color: #C56126; /* Cor de fundo semelhante à imagem */
-    border-radius: 25px; /* Bordas arredondadas */
+    background-color: #C56126; 
+    border-radius: 25px; 
     padding: 10px 20px; /* Espaçamento interno */
     width: 100%; /* Ajuste conforme necessário */
     max-width: 600px; /* Largura máxima */
     margin-top: 10px;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .search-input {
@@ -136,6 +154,7 @@ header {
 }
 
 .search-button i {
+    color: #1a1e36;
     font-size: 24px; /* Ajuste o tamanho do ícone conforme necessário */
 }
 
@@ -195,15 +214,23 @@ a {
     /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
     text-align: center;
     margin: 10px;
+    transition: all 0.5s;
+
 }
 
-
+.anuncio-card:hover {
+    transform: scale(1.05);
+  }
+  
+  .anuncio-card:active {
+    transform: scale(0.95) rotateZ(1.7deg);
+  }
 
 .anuncio-imagem {
     width: 100%;
     /* height: auto; */
     border-radius: 10px;
-    height: 100px; /* Altura padrão definida */
+    height: 200px; /* Altura padrão definida */
     object-fit: cover; /* Garante que a imagem preencha o espaço sem distorção */
 }
 
@@ -234,6 +261,28 @@ a {
     font-size: 12px;
 }
 
+.submit-btn {
+    background-color: #D97C41;
+    color: white;
+    border: none;
+    padding: 8px;
+    border-radius: 12px;
+    width: 100%;
+    font-size: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.submit-btn:hover {
+    background-color: #c96f36;
+}
+
+.anuncio-container {
+    display: flex;
+    flex-wrap: wrap; /* Permite que os anúncios sejam quebrados em novas linhas */
+    gap: 20px; /* Espaçamento entre os anúncios */
+    justify-content: space-evenly; /* Espaçamento uniforme entre os anúncios */
+}
 
 .section {
 
@@ -311,7 +360,7 @@ label {
     padding: 10px 0;
     text-align: center;
     align-items: center;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     color: #9b9b9b;
    
