--- a/estilo.css
+++ b/estilo.css
@@ -27,8 +27,8 @@ h1{
     background-color: #fef6ee; 
 }
 body {
+    font-size: 18px;
     color: #1a1e36;
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #FEF6EE;
