--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ h1{
     font-family: 'Logo';
 }
 
+h2{
+    font-family: 'Logo';
+
+}
 
 * {
     font-family: 'Basic';
@@ -26,6 +30,8 @@ h1{
     background-color: #fef6ee; 
 }
 body {
+    font-size: 18px;
+    color: #1a1e36;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -33,17 +39,26 @@ body {
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 .img {
     border-radius: 15px;
 }
-header {
+/* header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #FEF6EE;
     padding: 15px;
+} */
+header {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FEF6EE;
+    padding: 15px;
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .logo {
@@ -73,9 +88,10 @@ header {
 }
 
 .sidebar a {
+    font-family: 'Logo'; /* Nome da fonte, você pode escolher */
     padding: 15px 25px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
     display: block;
     transition: 0.2s;
